@@ -6,6 +6,7 @@
 * Paymill: Use .com instead of .de for save card url [besi]
 * Worldpay integration: Use more robust endpoint urls [nashbridges]
 * Braintree Blue: Return CC token in transaction hash [cyu]
+* Robokassa: Fix signature for empty amount [ukolovda]
 
 == Version 1.31.1 (February 25, 2013)
 
